# AI-Agent-and-Workflows

01-Agentic-AI-Workflow/: .gitignore  01-Gemini-Rest-calls.py  02-instructive-prompts.py  03-few-shot-prompt.py  04-multi-step-multi-model.py  05-invoices.db  05-structured-output-pydantic.py  06-tool-use-from-scratch.py  07-gemini-functions.py  08-gradio-chat-interface.py  09-agent-multi-tool.py  database_09.py  dummy_database.db  pyproject.toml
02-Openai-Agents-SDK/: .env  01-Simple-Gemini-Openai-sdk.py  pyproject.toml
